@@ -105,6 +105,7 @@ sub main() {
 
     my null $n;
     $n += 1;
+    $n -= 1;
 }
 
 main();
